причесываем старые задачи до hibernate